# cod_py_03

./: .gitignore  README.md  vendas.csv
07/: etl.py  ex_00.py  main.py
08/: etl.py  pyproject.toml
